tests/baselines/reference/classImplementsClass4.errors.txt
tests/cases/compiler/classImplementsClass4.ts(5,7): error TS2720: Class 'C' incorrectly implements class 'A'. Did you mean to extend 'A' and inherit its members as a subclass?
  Property 'x' is missing in type 'C' but required in type 'A'.
tests/cases/compiler/classImplementsClass4.ts(16,1): error TS2741: Property 'x' is missing in type 'C' but required in type 'C2'.


==== tests/cases/compiler/classImplementsClass4.ts (2 errors) ====
    class A {
        private x = 1;
        foo(): number { return 1; }
    }
    class C implements A {
          ~
!!! error TS2720: Class '{|C|0|}' incorrectly implements class '{|A|1|}'. Did you mean to extend '{|A|2|}' and inherit its members as a subclass?
!!! error TS2720:   Property 'x' is missing in type '{|C|3|}' but required in type '{|A|4|}'.
!!! related TS2728 tests/cases/compiler/classImplementsClass4.ts:2:13: 'x' is declared here.
!!! annotated symbol 0 tests/cases/compiler/classImplementsClass4.ts:5:7
!!! annotated symbol 1 tests/cases/compiler/classImplementsClass4.ts:1:7
!!! annotated symbol 2 tests/cases/compiler/classImplementsClass4.ts:1:7
!!! annotated symbol 3 tests/cases/compiler/classImplementsClass4.ts:5:7
!!! annotated symbol 4 tests/cases/compiler/classImplementsClass4.ts:1:7
        foo() {
            return 1;
        }
    }
    
    class C2 extends A {}
    
    var c: C;
    var c2: C2;
    c = c2;
    c2 = c;
    ~~
!!! error TS2741: Property 'x' is missing in type '{|C|0|}' but required in type '{|C2|1|}'.
!!! related TS2728 tests/cases/compiler/classImplementsClass4.ts:2:13: 'x' is declared here.
!!! annotated symbol 0 tests/cases/compiler/classImplementsClass4.ts:5:7
!!! annotated symbol 1 tests/cases/compiler/classImplementsClass4.ts:11:7